--- a/var/templates/mkiv/sidebar.html
+++ b/var/templates/mkiv/sidebar.html
@@ -5,7 +5,7 @@
     </form>
 </div>{% endif %}
 <ul>
-	{% for index, entry in search.entries %}
+	{% for index, entry in sidebar.entries %}
     <li>
         <a href="{{ entry.url }}" >{{ entry.name }}</a>
     </li>
