added text to the donations page

--- a/var/templates/radionew/donations.html
+++ b/var/templates/radionew/donations.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 <h2>{% lang L_DONATIONS %}</h2>
-
-<b><u>How to Donate:</b></u><br />
-<b>PayPal:</b> ask one of the admins on irc<br />
-<b>Flattr:</b> use the button at the bottom<br />
+<b><u>Why donate?</b></u><br />
+Providing a community with a tool to share music, and audio in general, in an easy-to-use and enjoyable way was, and still is our main goal and motivation for running RfK. In the past two years many things have changed and we're still working on improvements. But besides of the fun we have hosting and administrating the radio, it costs us a lot of money. Nevertheless we want to provide a free service and that's why we hope for donations, which will help us to pay the bills more easily. So, if you want to support us, feel free to donate a few pennies. Thank you very much!<br /><br />
+<b><u>How to donate:</b></u><br />
+<b>PayPal:</b> ask MrLoom or teddydestodes on irc<br />
+<b>Flattr:</b> use the flattr button at the bottom<br />
 <b>Bitcoin:</b> 1NDthvgi7B7HsTvG85gxBkft4AWuWkMXag<br /><br />
 {% if isAdmin %}
 EDIT FORM HERE
@@ -28,5 +29,5 @@ EDIT FORM HERE
 </tr>
 {% endfor %}
 </table>
-
+<br /><br />~Many thanks for supporting us <3
 {% endblock %}
