added servertime to sidebar (+ L_SERVERTIME)

--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -32,7 +32,7 @@
   <body>    
     <div id="container">      
       <div id="header">
-        <img src="{{ WEBROOT }}images/logo.png" alt="Logo" />
+        <img src="{{ WEBROOT }}images/logo2.png" alt="Logo" />
         <div class="disco">
         {% if disco_background %}
             <div class="cbackground"><img src="http://www.abload.de/img/{{ disco_background }}" height=65px width=129px /></div>
@@ -65,7 +65,7 @@
           <a href="{{ WEBROOT }}status.php">{% lang L_STATUS %}</a>          
           </li>
           <li {% if section == 'help' %}class="selected"{% endif %}>          
-          <a href="http://schuchtel.net/mwiki/index.php?title=Radio">{% lang L_HELP %}</a>          
+          <a href="http://radio.krautchan.net/wiki/">{% lang L_HELP %}</a>          
           </li>
           <li>          
           <a href="{{ WEBROOT }}donations.php">{% lang L_DONATIONS %}</a>          
