* added streamurls to the sidebar * we are now generating the playlist ourself to add multiple relays

--- a/var/templates/radionew/sidebar.html
+++ b/var/templates/radionew/sidebar.html
@@ -14,6 +14,14 @@ block.super
         </ul>
     </div>
 	<div class='infoblock'>
+		<h3>{% lang L_LISTEN %}</h3>
+		<ul>
+			{% for index, mount in sb_mounts %}
+			<li><a href="{{ WEBROOT }}listen.php?stream={{mount.id}}">{{mount.name}}</a></li>
+			{% endfor %}
+		</ul>
+	</div>
+	<div class='infoblock'>
 	<h3>{% lang L_LAST10TRACKS %}</h3>
 		<ul>
 		{% for index, song in sb_songlist %}
