--- a/var/templates/radionew/status.html
+++ b/var/templates/radionew/status.html
@@ -24,7 +24,7 @@
 	{% endfor %}
 	</ul>
     </td>
-    <td rowspan="{{streamnum}}" style="vertical-align:middle;text-align:center;font-size:3em;font-weight:bolder;color:lightgrey;">{{ traffic.out }} kB/s</td>
+    <td rowspan="{{streamnum}}" style="vertical-align:middle;text-align:center;font-size:3em;font-weight:bolder;color:lightgrey;">{{ traffic }} kB/s</td>
   </tr>
 </table>
 
