i10n now up-to-date, fix'd russian version [thanks, Siemens-kun!]

--- a/var/templates/radionew/sidebar.html
+++ b/var/templates/radionew/sidebar.html
@@ -14,7 +14,7 @@ block.super
         </ul>
     </div>
 	<div class='infoblock'>
-		<h3>{% lang L_LISTEN %}</h3>
+		<h3>{% lang L_LISTEN_CAP %}</h3>
 		<ul>
 			{% for index, mount in sb_mounts %}
 			<li><a href="{{ WEBROOT }}listen.php?stream={{mount.id}}">{{mount.name}}</a></li>
