updated scheme; added redirect after pw change

--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -32,7 +32,7 @@
   <body>    
     <div id="container">      
       <div id="header">
-        <img src="{{ WEBROOT }}images/logo2.png" alt="Logo" />
+        <img src="{{ WEBROOT }}images/logo.png" alt="Logo" />
         <div class="disco">
         {% if disco_background %}
             <div class="cbackground"><img src="http://www.abload.de/img/{{ disco_background }}" height=65px width=129px /></div>
