webplayer no longer preloads metadata

--- a/var/templates/radionew/nowplaying.html
+++ b/var/templates/radionew/nowplaying.html
@@ -64,6 +64,7 @@ $(function(){
             });
         },
     	swfPath: "{{ WEBROOT }}/js",
+    	preload: "none",
 		supplied: "mp3, oga"
     });
 
