HTML5 still doesn't work well enough

--- a/var/templates/radionew/nowplaying.html
+++ b/var/templates/radionew/nowplaying.html
@@ -65,6 +65,7 @@ $(function(){
         },
     	swfPath: "{{ WEBROOT }}/js",
     	preload: "none",
+    	solution: "flash, html",
 		supplied: "mp3, oga"
     });
 
